# heurs

./: .gitignore  Cargo.toml  README.md  heurs.toml  justfile
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/backend/src/handlers/: mod.rs  run.rs  submissions.rs  test_cases.rs
crates/backend/src/models/: mod.rs  run.rs  submissions.rs  test_cases.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  view.rs
crates/core/: Cargo.toml
crates/core/src/: compiler.rs  config.rs  lib.rs  macros.rs  runner.rs  test_case.rs  types.rs
crates/core/src/runner/: aws.rs  local.rs  mod.rs
crates/database/: Cargo.toml  dev.db
crates/database/migration/: Cargo.toml
crates/database/migration/src/: lib.rs  m20250626_000001_create_submission.rs  m20250626_000001_create_submissions.rs  m20250626_000002_create_test_cases.rs  m20250626_000003_create_execution_results.rs
crates/database/src/: connection.rs  lib.rs  macros.rs  prelude.rs  repository.rs  submission.rs
crates/database/src/entities/: mod.rs  prelude.rs  submission.rs
crates/database/src/entity/: execution_results.rs  mod.rs  prelude.rs  submission.rs  submissions.rs  test_cases.rs
crates/database/src/repository/: execution_result.rs  mod.rs  submission.rs  test_case.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: main.rs  router.rs  types.rs
frontend/src/components/: item_list_panel.rs  mod.rs  nav_bar.rs  visualizer_host.rs
frontend/src/pages/: mod.rs  not_found.rs  submission_detail.rs  submissions.rs  submit.rs  test_cases.rs  visualize.rs
infra/aws_runner/: Dockerfile  job.sh  s3_compile_run.sh
