[package]
name = "heurs-front"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.4"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlInputElement"] }
