[package]
name = "heurs-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
heurs-core = { path = "../core" }
heurs-database = { path = "../database" }
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1.0"
