[package]
name = "heurs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "process", "sync", "time"] }
threadpool = "1.8"
heurs-database = { path = "../database" }
