[package]
name = "heurs-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "process", "sync", "time"] }
threadpool = "1.8"
heurs-database = { path = "../database" }
async-trait = "0.1"
sea-orm = { version = "1.1.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
regex = "1.11.1"
toml = "0.7"
aws-config = "1"
aws-sdk-s3 = "1"
uuid = { version = "1", features = ["v4"] }
